<resources>
    <string name="app_name">Fundoo Pay</string>
    <string name="fundoo">Fundoo</string>
    <string name="pay">Pay</string>
    <string name="easiest_way_to_manage_your_daily_expenses">Easiest way to manage your daily expenses</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="pin_code">Pin Code</string>
    <string name="allow_us_to_access">Allow us to access</string>
    <string name="we_will_send_an_sms_from_your_phone_to_verify_if_your_phone_number_is_registered_with_your_bank_account">We will send an SMS from your phone to verify if your phone number is registered with your bank account.</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="sim_1">Sim 1    </string>
    <string name="sim_2">    Sim 2</string>
    <string name="sms_nto_securly_verify_mobile_number">SMS  \nTo securly verify mobile number</string>
    <string name="phone_state_nto_securly_verify_phone_with_upi">PHONE STATE  \nTo securly verify phone with UPI</string>
    <string name="select_your_bank">Select Your Bank</string>
    <string name="all_banks">All Banks</string>
    <string name="it_should_be_unique_e_g_14brehja">*It should be unique. e.g. 14Brehja</string>
    <string name="todo">TODO</string>
    <string name="xxxxxxxx1234">xxxxxxxx1234</string>
    <string name="saving">Saving</string>
    <string name="ifsc_0000624">IFSC - 0000624</string>
    <string name="upi_pin">UPI PIN</string>
    <string name="if_you_don_t_have_upi_pin">If you don’t have UPI PIN</string>
    <string name="set_upi_pin">SET UPI PIN</string>
    <string name="reset_upi_pin">RESET UPI PIN</string>
    <string name="submit">Submit</string>
    <string name="last_6_digits_of_your_debit_card_number">Last 6 digits of your debit card number</string>
    <string name="validity_of_card">Validity of card</string>
    <string name="_">/</string>
    <string name="set_4_digit_upi_pin">Set 4 digit UPI PIN</string>
    <string name="set">SET</string>
    <string name="_4_digit_upi_pin_exist">4 digit UPI PIN exist</string>
    <string name="balance">BALANCE</string>
    <string name="request_balance">Request Balance</string>
    <string name="bills">      Bills</string>
    <string name="payables">Payables</string>
    <string name="bank_account">Bank Account</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="please_enter_your_country_code_and_old_phone_number">Please enter your country code and old phone number</string>
    <string name="_91">+91</string>
    <string name="old_phone_number">Old Phone Number</string>
    <string name="please_enter_your_country_code_and_newphone_number">Please enter your country code and newphone number</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="profile">Profile</string>
    <string name="new_user_name">New User Name</string>
    <string name="full_name_edit">Full Name</string>
    <string name="pincode">Pincode</string>
    <string name="save">SAVE</string>
</resources>
