<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/welcome_frag"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/white"
             android:clickable="true"
             android:focusable="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundoopay_wallp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="29dp"
            android:layout_toLeftOf="@+id/textView8"
            android:layout_toStartOf="@+id/textView8"
            android:fontFamily="@font/bauhaus_93"
            android:text="@string/fundoo"
            android:textAppearance="@style/Bauhaus_93"
            android:textColor="@android:color/white"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_toEndOf="@+id/nextRegister"
            android:layout_toRightOf="@+id/nextRegister"
            android:fontFamily="@font/bauhaus_93"
            android:text="@string/pay"
            android:textAppearance="@style/Bauhaus_93"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp"
            android:id="@+id/textView8"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="64dp"
            android:fontFamily="@font/avenir"
            android:gravity="center"
            android:text="@string/easiest_way_to_manage_your_daily_expenses"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/nextRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:fontFamily="@font/avenir"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </RelativeLayout>
</FrameLayout>