<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/accountVerify"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/white"
             android:clickable="true"
             android:focusable="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_access">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="154dp"
            android:fontFamily="@font/avenir"
            android:text="@string/verify_mobile_number"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_gravity="start"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/avenir"
            android:text="@string/we_will_send_an_sms_from_your_phone_to_verify_if_your_phone_number_is_registered_with_your_bank_account"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@android:color/white"
            android:padding="2dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sim1Selection"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/sim1_select_first"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/sim_1"
                style="?android:attr/borderlessButtonStyle"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                tools:ignore="RtlSymmetry"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sim2Selection"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:background="@drawable/sim2_select_first"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:text="@string/sim_2"
                style="?android:attr/borderlessButtonStyle"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                tools:ignore="RtlSymmetry"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/nextVerifyComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:fontFamily="@font/avenir"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </RelativeLayout>
</FrameLayout>